# Film-Scan-Converter

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
ART-Commands/: film_scan_converter_directory.sh  film_scan_converter_directory.txt  film_scan_converter_files.sh  film_scan_converter_files.txt
docs/: how-to-add-to-ART.md  how-to-use.md  installation.md
source/: Film Scan Converter.pyw  GUI.py  RawProcessing.py  _version.py
